<resources>
    <string name="app_name" translatable="false">UI KIT</string>
    <string name="rectangle">Rectangle</string>
    <string name="online">Online</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="group">group</string>
    <string name="search">Search</string>
    <string name="user_avatar">User Avatar</string>
    <string name="conversation">conversation</string>
    <string name="message">Write a message</string>
    <string name="you_won_t_be_able_send_or_receive_messages">You won\'t be able send or receive messages</string>
    <string name="unblock">Unblock</string>
    <string name="unabl_to_join_message">Unable to join group</string>
    <string name="you">You</string>
    <string name="owner">Owner</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="create_group">Create Group</string>
    <string name="kindly_enter_group_details_to_proceed">Kindly, enter group details to proceed</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
        with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
        \software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="replyTxt">reply</string>
    <string name="pin">pin</string>
    <string name="message_deleted">This message was deleted</string>
    <string name="tap_to_start_conversation">Tap to start conversation</string>
    <string name="view_on_youtube">View on Youtube</string>
    <string name="visit">Visit</string>
    <string name="remove">Remove</string>
    <string name="remove_from_admin">Remove  %1$s from a Admin</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="you_cannot_perform_action">You cannot perform action on yourself</string>
    <string name="only_group_owner_removes_admin">Only group owner can remove admin.</string>
    <string name="removed_from_admin">%1$s is removed from admin privilege</string>
    <string name="update_group_member_error">Unable to update Group Member</string>
    <string name="admin_list_retrieve_error" translatable="false">Admin list retrieval failed</string>
    <string name="unblock_user_question">Would you like to unblock %1$s</string>
    <string name="user_unblocked">%1$s is unblocked</string>
    <string name="unblock_user_error">Unblock User Failed</string>
    <string name="block_user_list_error" translatable="false">Blocked user retrieval failed</string>
    <string name="create_group_error">Unable to create a group</string>
    <string name="make_admin">Make Admin</string>
    <string name="make_admin_question">Do you like to make %1$s as a Admin</string>
    <string name="user_is_admin">%1$s is now Admin</string>
    <string name="update_scope_error">Operation failed on %1$s</string>
    <string name="group_member_list_error">Error : Not able to load group member list</string>
    <string name="edit_message">Edit Message</string>
    <string name="text_copied_clipboard">Text Copied to clipboard</string>
    <string name="grant_camera_permission">Please grant camera permission from app setting</string>
    <string name="grant_storage_permission">Please grant storage permission from app setting</string>
    <string name="file_not_exist">File doesn\'t exists</string>
    <string name="call">Call</string>
    <string name="call_list_error">Unable to fetch Call List</string>
    <string name="calls">Calls</string>
    <string name="no_call_message">You have not made any calls</string>
    <string name="calling">Calling</string>
    <string name="call_initiate_error">Unable to initiate call</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="video_call">Video Call</string>
    <string name="audio_call" translatable="false">Audio Call</string>
    <string name="history">History</string>
    <string name="all" translatable="false">All</string>
    <string name="missed">Missed</string>
    <string name="new_call">New Call</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="missed_call">Missed</string>
    <string name="rejected_call">Rejected</string>
    <string name="fill_this_field">Fill this Field</string>
    <string name="remove_from_group">Remove from %1$s</string>
    <string name="add_in_group" translatable="false">Add in Group \" %1$s \"</string>
    <string name="unblock_user">Unblock User</string>
    <string name="block_user" translatable="false">Block User</string>
    <string name="add_user_to_group" translatable="false">Add  %1$s  to \" %2$s \"</string>
    <string name="user_added_to_group">%1$s is added to \"  %2$s \"</string>
    <string name="user_removed_from_group">%1$s is removed from \" %2$s \"</string>
    <string name="kicked_error">Group Member Kicked Failed</string>
    <string name="user_is_blocked">%1$s  is Blocked</string>
    <string name="block_user_error" translatable="false">Unable to Block %1$s</string>
    <string name="exit_group_title">Exit Group</string>
    <string name="exit_group_message">Exit from group ?</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete Message</string>
    <string name="delete_group_title">Delete Group</string>
    <string name="delete_group_message">Delete the group</string>
    <string name="group_delete_error">Group Deletion Failed</string>
    <string name="cannot_remove_member">Can\'t remove %1$s</string>
    <string name="leave_group_error">Unable to leave group</string>
    <string name="blocked_list_error" translatable="false">Blocked userlist retrieval failed</string>
    <string name="edit">Edit Message</string>
    <string name="preview">Preview</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <string name="joining">Joining</string>
    <string name="incorrect">Incorrect</string>
    <string name="scale_type_not_supported">ScaleType %1$s not supported.</string>
    <string name="adjust_viewbound_not_supported" translatable="false">adjustViewBounds not supported.</string>
    <string name="conversation_itemclick_error"><![CDATA[OnItemClickListener<Conversation> is null]]></string>
    <string name="group_itemclick_error"><![CDATA[OnItemClickListener<Group> is null]]></string>
    <string name="user_itemclick_error"><![CDATA[OnItemClickListener<User> is null]]></string>
    <string name="smart_reply_itemclick_error"><![CDATA[OnItemClickListener<String> is null]]></string>
    <string name="send">Send</string>
    <string name="details">Details</string>
    <string name="administrators" translatable="false">Administrators</string>
    <string name="members">Members</string>
    <string name="add_members" translatable="false">Add Members</string>
    <string name="privacy_support"><![CDATA[Privacy & Support]]></string>
    <string name="privacy_security"><![CDATA[Privacy &  Security]]></string>
    <string name="send_message">Send Message</string>
    <string name="actions" translatable="false">Actions</string>
    <string name="user_title">User</string>
    <string name="blocked_user" translatable="false">Blocked users</string>
    <string name="forward">Forward Message</string>
    <string name="add" translatable="false">Add</string>
    <string name="add_as_admin" translatable="false">Add as Admin</string>
    <string name="group_title">Groups</string>
    <string name="more">More</string>
    <string name="preferences">Preferences</string>
    <string name="users_title">Users</string>
    <string name="shared_media">Shared Media</string>
    <string name="no_media">No Media Available</string>
    <string name="baseMessage" translatable="false">baseMessage</string>
    <string name="load_more">Load More</string>
    <string name="load_more_members">Load more %1$s members</string>
    <string name="group_list_error">Unable to fetch Group List</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="files">Files</string>
    <string name="no_conversations">You have no conversations.</string>
    <string name="no_user_available">No users available</string>
    <string name="no_group_available">No Groups Available</string>
    <string name="custom_message">Custom Message not supported</string>
    <string name="no_block_users">No Block Users</string>
    <string name="no_missedcall_message">You dont have any missed calls</string>
    <string name="ongoing_call">Call is Ongoing</string>
    <string name="ongoing_call_message">There is already Call ongoing. Would you like to join ?</string>
    <string name="tap_to_join_call">Tap to join Ongoing Call</string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="enter_avatar_url">Enter Url for avatar</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="update_user">Update User</string>
    <string name="banned_members" translatable="false">Banned Members</string>
    <string name="ban_list_fetch_error" translatable="false">Unable to fetch Banned Members List</string>
    <string name="ban_member_of_group" translatable="false">Banned Members of %1$s</string>
    <string name="member_unbanned_success">%1$s unbanned from %2$s</string>
    <string name="unban_error">Unable to unban %1$s</string>
    <string name="enter_group_desc">Enter Group Description</string>
    <string name="enter_group_pwd">Enter Group Password</string>
    <string name="enter_group_cnf_pwd">Confirm Password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="enter_password_to_join">Enter Password to join %1$s</string>
    <string name="no_ban_members">No Banned Members</string>
    <string name="moderators">Moderators</string>
    <string name="modertor_list_retrieve_error">Unable to retrieve moderator list.</string>
    <string name="remove_from_moderator">Remove %1$s from Moderator</string>
    <string name="removed_from_moderator">%1$s is removed from moderator privilege</string>
    <string name="make_moderator">Make Moderator</string>
    <string name="make_moderator_question">Do you like to make %1$s as a Moderator</string>
    <string name="reply">Reply in Message</string>
    <string name="share_message">Share a message</string>
    <string name="reply_thread">Start a Thread</string>
    <string name="copy_message">Copy Message</string>
    <string name="message_info">Message Info</string>
    <string name="send_audio_files">Send Audio Files</string>
    <string name="send_files_from_gallery">Photo &amp; Video Gallery</string>
    <string name="send_from_camera">Capture Image</string>
    <string name="send_files">Files &amp; Documents</string>
    <string name="share_location">Share your location</string>
    <string name="create_poll">Create Poll</string>
    <string name="option">Options</string>
    <string name="create_polls">Create a Poll</string>
    <string name="add_a_poll" translatable="false">Add a Poll</string>
    <string name="enter_your_question">Enter your Question</string>
    <string name="question">Question</string>
    <string name="add_a_new_option" translatable="false">Add a New Option</string>
    <string name="send_sticker">Send Stickers</string>
</resources>