<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/message_actions"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:elevation="4dp"
    android:padding="8dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/reactions"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="wrap_content"/>
     <TextView
        android:id="@+id/message_info"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_info"
        android:textStyle="bold"
        android:text="@string/message_info"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/start_thread"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"
        android:text="@string/reply_thread"
        android:drawableStart="@drawable/ic_thread_24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/reply_message"
        android:clickable="true"
        android:drawableStart="@drawable/ic_reply"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"
        android:text="@string/reply"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/forward_message"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_forward"
        android:textStyle="bold"
        android:text="@string/forward"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/copy_message"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"
        android:text="@string/copy_message"
        android:drawableStart="@drawable/ic_content_copy_black_24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/share_message"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_share_24dp"
        android:textStyle="bold"
        android:text="@string/share_message"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/edit_message"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"
        android:text="@string/edit"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/delete_message"
        android:drawableStart="@drawable/ic_delete_24dp"
        android:drawableTint="@color/red"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:textColor="@color/red"
        android:foreground="?attr/selectableItemBackground"
        android:textStyle="bold"
        android:text="@string/delete"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

